--- a/src/components/registration/Registration.css
+++ b/src/components/registration/Registration.css
@@ -58,7 +58,46 @@
   background: linear-gradient(135deg, #71b7e6, #9b59b6);
 }
 input[type="radio"] {
-  height: 10px;
+  margin-top: 15px;
+  height: 14px;
   font-size: 16px;
   width: 10%;
 }
+
+.checkBox  {
+   width: 80%;
+   border-color: #9b59b6;
+  
+}
+
+.Dropdown{
+ width: 80%;
+}
+.Dropdown select {
+  width: 100%;
+   height: 45px;
+
+  outline: none;
+  font-size: 16px;
+  border-radius: 5px;
+  padding-left: 15px;
+  border: 1px solid #ccc;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+  border-color: #9b59b6;
+  
+}
+
+.input-box textarea{
+  width: 100%;
+   border-color: #9b59b6;
+    outline: none;
+  font-size: 16px;
+  border-radius: 5px;
+  padding-left: 15px;
+  border: 1px solid #ccc;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+  border-color: #9b59b6;
+}
+
